--- a/src/app/features/administration/components/tickets/mass-document-dispatch/mass-document-dispatch.component.html
+++ b/src/app/features/administration/components/tickets/mass-document-dispatch/mass-document-dispatch.component.html
@@ -77,9 +77,9 @@
           <th>
             <p-tableHeaderCheckbox></p-tableHeaderCheckbox>
           </th>
-          <th>Ticket name</th>
+          <th>{{'mngt_wrkflw.tickets.ticketName' | translate }}</th>
           <th>{{'mngt_wrkflw.tickets.clientName' | translate }}</th>
-          <th>Ref No.</th>
+          <th>{{'mngt_wrkflw.tickets.refNo' | translate }}.</th>
           <th>{{'mngt_wrkflw.tickets.dateCreated' | translate }}</th>
           <th>{{'mngt_wrkflw.tickets.transactionType' | translate }}</th>
           <th>{{'mngt_wrkflw.tickets.endorsementNumber' | translate }}</th>
